modified:   README.md and sass templates

--- a/using-lsc-ext/components/_variables.sass
+++ b/using-lsc-ext/components/_variables.sass
@@ -1,6 +1,12 @@
+@use '../theme' as t
+
 $variable-one: #000000
 $variable-two: #ffffff
 $variable-three: pink
+$generic-blue: t.$blue
+$generic-font-size: t.$font-size
+$generic-padding: t.$padding
+
 $font-weights: (regular: 400, medium: 500, bold: 800)
 
 $mobile: 800px
