--- a/using-lsc-ext/components/_card.sass
+++ b/using-lsc-ext/components/_card.sass
@@ -1,15 +1,13 @@
 //* import (with @use) theme files to setup style cards here
-@use '../theme' as t
-    
-.card
-    font-size: t.$font-size
-    color: t.$blue
+@use '../components' as c
 
-    padding: t.$padding
+.card
+    display: block
+    font-size: c.$generic-font-size
+    color: c.$generic-blue
+
+    padding: c.$generic-padding
 
     //* media queries can be done as nested within cards
     @media (min-width: 45em)
         padding: 2em
-        
-
-
